--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -22,7 +22,7 @@
           <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/secret">Home</a></li>
           <li class="dropdown"><a
               class="dropdown-toggle"
               data-toggle="dropdown"
@@ -34,13 +34,15 @@
               <li><a href="#">Page 1-3</a></li>
             </ul>
           </li>
-          <li><a href="#">Page 2</a></li>
+          <li><a href="/#">page</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/register"><span class="glyphicon glyphicon-user"></span>
               register</a></li>
           <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span>
               Login</a></li>
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span>
+              Logout</a></li>
         </ul>
       </div>
     </nav>
