my first mern project

--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -22,7 +22,7 @@
           <a class="navbar-brand" href="#">WebSiteName</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/secret">Home</a></li>
+          <li class="active"><a href="/secret">Secret</a></li>
           <li class="dropdown"><a
               class="dropdown-toggle"
               data-toggle="dropdown"
